--- a/admin-service/templates/document_upload.html
+++ b/admin-service/templates/document_upload.html
@@ -165,7 +165,7 @@
                 </div>
                 
                 <!-- Desktop view -->
-                <div class="hidden md:block overflow-x-auto">
+                <div class="hidden md:block table-container">
                     <table class="w-full divide-y divide-gray-200" id="documentsTable">
                         <thead class="bg-gray-50">
                             <tr>
